--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup React
-        uses: actions/setup-python@v2
+        uses: actions/setup-node@v1
         with:
           node-version: 12.x
       
