--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,3 +18,6 @@ jobs:
       
       - name: Install dependencies
         run: npm install
+
+      - name: Generate build
+        run: npm run build       
